--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,17 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Raleway", sans-serif;
+}
+
 ul {
   list-style: none;
 }
