--- a/styles.css
+++ b/styles.css
@@ -160,45 +160,54 @@ nav ul {
   margin-bottom: 1rem;
 }
 
-.reviews {
+/* Reviews */
+
+.review-quote {
+  position: relative;
+  top: 20px;
+  right: -20px;
+}
+.review-section {
   background-color: var(--main-bg);
-  color: white;
-  display: flex;
-  padding-bottom: 8rem;
+  color: var(--white);
+  padding-top: 2rem;
+  padding-bottom: 17rem;
 }
 
-.review-container-1,
-.review-container-2,
-.review-container-3 {
-  background-color: var(--testimonial-bg);
-  margin: 1.8rem;
-  border-radius: 2px;
-  padding: 40px 20px 15px;
+.reviews-container {
+  display: flex;
+  font-size: 14px;
+}
+
+.review-container {
+  background: var(--testimonial-bg);
+  max-width: 450px;
+  margin: auto;
+  border-radius: 6px;
+  padding: 37px 34px 33px;
   z-index: 1;
 }
 
-.review-quote {
-  margin: auto;
-  position: relative;
-  bottom: 155px;
-  left: 70px;
-}
-
-.reviewer {
+.reviewer-container {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+  padding: 2px 0 13px;
 }
 
-.rtext {
-  display: flex;
-}
-
-.reviewer-img {
-  width: 20%;
-  height: 20%;
+.review-container img {
   border-radius: 50%;
+  height: 15%;
+  width: 15%;
+}
+
+.review {
+  line-height: 1.5rem;
+}
+
+span {
+  display: block;
+  margin-bottom: 0.5rem;
 }
 
 .footer {
@@ -313,8 +322,15 @@ nav ul {
     width: 80%;
   }
 
-  .reviews {
+  .reviews-container {
     flex-direction: column;
+    gap: 2rem;
+  }
+
+  .review-quote {
+    position: relative;
+    top: 18px;
+    right: -70px;
   }
 
   .email {
